--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
-    "express": "4.16.3",
-    "pg": "8.0.3",
-    "redis": "2.8.0",
+    "body-parser": "*",
     "cors": "2.8.4",
-    "nodemon": "1.18.3",
-    "body-parser": "*"
+    "express": "4.16.3",
+    "nodemon": "^2.0.12",
+    "pg": "8.0.3",
+    "redis": "^3.1.2"
   },
   "scripts": {
     "dev": "nodemon",
