--- a/worker/package.json
+++ b/worker/package.json
@@ -1,10 +1,10 @@
 {
-  "dependencies": {
-    "nodemon": "1.18.3",
-    "redis": "2.8.0"
-  },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon"
+  },
+  "dependencies": {
+    "nodemon": "^2.0.12",
+    "redis": "^3.1.2"
   }
 }
