--- a/k8s/server-cluster-ip-service.yaml
+++ b/k8s/server-cluster-ip-service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    component: web
+    component: server
   ports:
-    - port: 3000
-      targetPort: 3000
+    - port: 5000
+      targetPort: 5000
